--- a/custom-addons/nilco_pos_multi_uom_price/views/product_view.xml
+++ b/custom-addons/nilco_pos_multi_uom_price/views/product_view.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
+      <data>
     <record id="product_template_form_view" model="ir.ui.view">
         <field name="name">product.template.form.inherit</field>
         <field name="model">product.template</field>
@@ -77,7 +78,7 @@
      </record>
 
 <template id="orderline_template" inherit_id="point_of_sale.Orderline">
-   
+
      <xpath expr="//ul[@class='info-list ms-2']" position="inside">
             <!-- Add a new list item -->
             <li class="additional-info">
@@ -87,5 +88,6 @@
             </li>
         </xpath>
 </template>
+        </data>
 </odoo>
 
