--- a/custom-addons/ksa_zatca_integration_pos/reports/e_invoicing_b2c_invoice.xml
+++ b/custom-addons/ksa_zatca_integration_pos/reports/e_invoicing_b2c_invoice.xml
@@ -226,7 +226,7 @@
                             <col style="width:21%"/>
 
                             <tr style="background-color:#878484;">
-                              <!--  <th class="second_table left_column" colspan="2" style="color:white;">
+                                <th class="second_table left_column" colspan="2" style="color:white;">
                                     <span>
                                         <b>Seller</b>
                                     </span>
