--- a/custom-addons/ksa_zatca_integration_pos/reports/e_invoicing_b2c_invoice.xml
+++ b/custom-addons/ksa_zatca_integration_pos/reports/e_invoicing_b2c_invoice.xml
@@ -29,7 +29,7 @@
                     </t>
                     <t t-else="">
                         <div class="col-4">
-        <img style="text-align:center;width:200px;max-height:200px;float:right;margin-top:-10px;padding-top:0px;"
+        <img style="text-align:center;width:200px;max-height:200px;float:left;margin-top:-10px;padding-top:0px;"
              alt="Barcode" t-att-src="doc.get_qrcode()"/>
     </div>
                         <t t-set="invoice_type_ar" t-value="'فاتورة ضريبية'"/>
