--- a/custom-addons/ksa_zatca_integration_pos/reports/e_invoicing_b2c_invoice.xml
+++ b/custom-addons/ksa_zatca_integration_pos/reports/e_invoicing_b2c_invoice.xml
@@ -1,5 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
+    <template id="custom_external_layout_boxed" inherit_id="module_name.external_layout_boxed">
+        <!-- Inherit the template to modify the content -->
+        <xpath expr="//div[@class='o_report_layout_boxed']" position="inside">
+            <!-- Add your custom barcode in the desired location -->
+            <div style="text-align:center; margin-top:-10px; padding-top:0px;">
+                <img style="width:200px; max-height:200px;" alt="Barcode" t-att-src="doc.get_qrcode()"/>
+            </div>
+        </xpath>
+    </template>
     <template id="report_e_invoicing_b2c_invoice_template">
         <t t-call="web.html_container">
             <t t-foreach="docs" t-as="doc">
@@ -767,7 +776,9 @@
                                             style="background-color:#4f4d4d;text-align:center;color:white;">
                                             <span class="lable_bold">VAT Rate</span>
                                             <br/>
-                                            <span class="lable_bold">ﻣﻌﺪل ﺿﺮﻳﺒﺔ اﻟﻘﻴﻤﺔ اﻟﻤﻀﺎﻓﺔ</span>
+                                            <span class="lable_bold">ﻣﻌﺪل ﺿﺮﻳﺒﺔ </span>
+                                            <br/>
+                                             <span class="lable_bold"> اﻟﻘﻴﻤﺔ اﻟﻤﻀﺎﻓﺔ</span>
                                         </th>
                                         <th align="center" name="tax_amount" class="second_table"
                                             style="background-color:#4f4d4d;text-align:center;color:white;">
