--- a/custom-addons/ksa_zatca_integration_pos/reports/e_invoicing_b2c_invoice.xml
+++ b/custom-addons/ksa_zatca_integration_pos/reports/e_invoicing_b2c_invoice.xml
@@ -1,7 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
 
-    <template id="report_e_invoicing_b2c_invoice_template">
+    <templates id="report_e_invoicing_b2c_invoice_template">
+            <t t-name="custom_external_layout_boxed" t-inherit="web.external_layout_boxed" t-inherit-mode="extension" owl="1">
+                <xpath expr="//div[@class='o_report_layout_boxed']" position="inside">
+            <!-- Add your custom barcode in the desired location -->
+            <div style="text-align:center; margin-top:-10px; padding-top:0px;">
+                <img style="width:200px; max-height:200px;" alt="Barcode" t-att-src="doc.get_qrcode()"/>
+            </div>
+        </xpath>
+ </t>
         <t t-call="web.html_container">
             <t t-foreach="docs" t-as="doc">
                 <t t-call="web.external_layout">
@@ -984,5 +992,5 @@
                 </t>
             </t>
         </t>
-    </template>
+    </templates>
 </odoo>
