--- a/custom-addons/nilco_pos_multi_uom_price/views/product_view.xml
+++ b/custom-addons/nilco_pos_multi_uom_price/views/product_view.xml
@@ -75,6 +75,18 @@
             </xpath>
             </field>
      </record>
+    <record id="view_move_form_inherit" model="ir.ui.view">
+        <field name="model">account.move</field>
+        <field name="inherit_id" ref="account.view_move_form"/>
+        <field name="arch" type="xml">
+            <xpath expr="//field[@name='invoice_line_ids']/tree//field[@name='discount']" position="after">
+                 <field name="selected_uom_ids" invisible="1"/>
+                 <field name="name_field" />
+            </xpath>
+
+
+        </field>
+    </record>
 
 
 </odoo>
