--- a/custom-addons/ksa_zatca_integration_pos/reports/e_invoicing_b2c_invoice.xml
+++ b/custom-addons/ksa_zatca_integration_pos/reports/e_invoicing_b2c_invoice.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
-
     <template id="report_e_invoicing_b2c_invoice_template">
-
         <t t-call="web.html_container">
             <t t-foreach="docs" t-as="doc">
                 <t t-call="web.external_layout">
@@ -30,10 +28,8 @@
                         <t t-set="invoice_type_ar" t-value="'اشعار دائن'"/>
                     </t>
                     <t t-else="">
-                    <div style="text-align:center; margin-top:-10px; padding-top:0px;">
-    <img style="width:200px; max-height:200px;" alt="Barcode" t-att-src="doc.get_qrcode()"/>
-</div>
-                        <t t-set="invoice_type_ar" t-value="'فاتورة ضريبية/Tax Invoice'"/>
+                        <t t-set="invoice_type" t-value="'Tax Invoice'"/>
+                        <t t-set="invoice_type_ar" t-value="'فاتورة ضريبية'"/>
                     </t>
 
                     <t t-set="conf_partner"
@@ -52,7 +48,10 @@
                        t-value="doc.partner_id.buyer_identification if doc.l10n_is_self_billed_invoice else doc.company_id.license"/>
                     <t t-set="license_no"
                        t-value="doc.partner_id.buyer_identification_no if doc.l10n_is_self_billed_invoice else doc.company_id.license_no"/>
-
+<div class="col-4">
+                                <img style="text-align:center;width:200px;max-height:200px;float:right;margin-top:-10px;padding-top:0px;"
+                                     alt="Barcode" t-att-src="doc.get_qrcode()"/>
+                            </div>
                     <h3 style="text-align:center;">
                         <t t-esc="invoice_type_ar"/>
                     </h3>
@@ -769,17 +768,13 @@
                                             style="background-color:#4f4d4d;text-align:center;color:white;">
                                             <span class="lable_bold">VAT Rate</span>
                                             <br/>
-                                            <span class="lable_bold">ﻣﻌﺪل ﺿﺮﻳﺒﺔ </span>
-                                            <br/>
-                                             <span class="lable_bold"> اﻟﻘﻴﻤﺔ اﻟﻤﻀﺎﻓﺔ</span>
+                                            <span class="lable_bold">ﻣﻌﺪل ﺿﺮﻳﺒﺔ اﻟﻘﻴﻤﺔ اﻟﻤﻀﺎﻓﺔ</span>
                                         </th>
                                         <th align="center" name="tax_amount" class="second_table"
                                             style="background-color:#4f4d4d;text-align:center;color:white;">
                                             <span class="lable_bold">VAT Amount</span>
                                             <br/>
-                                            <span class="lable_bold">مبلغ ﺿﺮﻳﺒﺔ </span>
-                                            <br/>
-                                            <span class="lable_bold"> اﻟﻘﻴﻤﺔ اﻟﻤﻀﺎﻓﺔ</span>
+                                            <span class="lable_bold">مبلغ ﺿﺮﻳﺒﺔ اﻟﻘﻴﻤﺔ اﻟﻤﻀﺎﻓﺔ</span>
                                         </th>
                                                 <!-- Editeing-->
 
@@ -793,10 +788,7 @@
                                             style="background-color:#4f4d4d;text-align:center;color:white;">
                                             <span class="lable_bold">Subtotal Inclusive of VAT</span>
                                             <br/>
-                                            <span class="lable_bold">إﺟﻤﺎﻟﻲ اﻟﻤﺒﻠﻎ ﺷﺎﻣﻞ </span>
-                                            <br/>
-                                            <span class="lable_bold"> ﺿﺮﻳﺒﺔ اﻟﻘﻴﻤﺔ اﻟﻤﻀﺎﻓﺔ</span>
-
+                                            <span class="lable_bold">إﺟﻤﺎﻟﻲ اﻟﻤﺒﻠﻎ ﺷﺎﻣﻞ ﺿﺮﻳﺒﺔ اﻟﻘﻴﻤﺔ اﻟﻤﻀﺎﻓﺔ</span>
                                         </th>
                                     </tr>
                                 </thead>
