--- a/custom-addons/ksa_zatca_integration_pos/reports/e_invoicing_b2c_invoice.xml
+++ b/custom-addons/ksa_zatca_integration_pos/reports/e_invoicing_b2c_invoice.xml
@@ -23,7 +23,10 @@
                         <t t-set="invoice_type" t-value="'Debit Note'"/>
                         <t t-set="invoice_type_ar" t-value="'اشعار ﻣﺪﻳﻦ'"/>
                     </t>
-                   
+                   <t t-elif="doc.move_type == 'out_refund'">
+                        <t t-set="invoice_type" t-value="'Credit Note'"/>
+                        <t t-set="invoice_type_ar" t-value="'اشعار دائن'"/>
+                    </t>
                     <t t-else="">
                         <t t-set="invoice_type" t-value="'Tax Invoice'"/>
                         <t t-set="invoice_type_ar" t-value="'فاتورة ضريبية'"/>
@@ -46,7 +49,7 @@
                     <t t-set="license_no"
                        t-value="doc.partner_id.buyer_identification_no if doc.l10n_is_self_billed_invoice else doc.company_id.license_no"/>
 <div class="col-4">
-                                <img style="text-align:center;width:200px;max-height:200px;float:right;margin-top:-10px;padding-top:0px;"
+                                <img style="text-align:center;width:100px;max-height:100px;float:right;margin-top:-0px;padding-top:0px;"
                                      alt="Barcode" t-att-src="doc.get_qrcode()"/>
                             </div>
                     <h3 style="text-align:center;">
